syntax = "proto3";

option csharp_namespace = "DemoProject.Web.Protobufs.V1";

package v1;

service DestinationData {
	rpc GetAllDestinationsUnary (GetAllDestinationRequest) returns (GetAllDestinationResponse);
}

message GetAllDestinationRequest {
}

message GetAllDestinationResponse {
	repeated Destination Destinations = 5;
}
message Destination {
	string Destination = 1;
	string DestDesc = 2;
}
